2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_do): Calculated penalty for unrecoverable
	string with (len - recent break), not (strlen(s) - recent break).

2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in (LT_REVISION): Incremented library revision.

	* src/thbrk/thbrk.c (brk_do): (Optimization) Do not contest best break 
	when trie walking crashes in recover mode. It won't win recovery 
	criterion anyway. Also got rid of one inner loop condition.

2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_recover): Do not try to recover after a
	leading vowel.

2006-08-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (th_brk): Tokenized mixed Thai-English text and
	called brk_do() chunk by chunk.

	* src/thbrk/thbrk.c (brk_do, brk_recover): Accepted string and length
	rather than null-terminated string, to support chunk-wise breaking.

2006-08-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_pool_delete): Adjusted code, for tiny
	performance improvement, esp. when deleting first node.

2006-08-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/tdict.txt: Manually revised word list. Removed some
	archaic or obsolete words. Added some new terms.

2006-08-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c: s/penulty/penalty/. :-P

2006-08-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_do): Calculated penalty more accurately by
	measuring distance from recent break pos, rather than the crash pos.
	Also added penalty on recovery failure.

	* src/thbrk/thbrk.c (best_brk_contest): Fixed boolean expression by
	adding parentheses.

2006-08-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* libthai.pc.in: Added datrie to Requires.

	* src/thbrk/Makefile.am: Removed old dict before rebuilding.
